fleet/godemo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: godemo
  labels:
    app: godemo
spec:
  selector:
    app: godemo
  ports:
    - name: http
      port: 80
      targetPort: http
