fleet/godemo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: godemo
  labels:
    app: godemo
spec:
  rules:
    - host: godemo.192-168-1-151.traefik.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: godemo
                port:
                  number: 80
